fix: btn margin % not working on firefox

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -84,7 +84,7 @@ h4.title-font{
 
 .btn {
   @extend .title-font;
-  margin: 0 1% 2%;
+  margin: 2px;
   background-color: $color1;
   border-color: $color3;
   border-width: 2px;
